--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/minfaye/iot_ambilamp"
+  }
   "author": "Min Faye",
   "license": "ISC",
   "engines": {
